tests/ui/traits/const-traits/staged-api-user-crate.stderr
error[E0658]: const trait impls are experimental
  --> $DIR/staged-api-user-crate.rs:24:6
   |
LL | impl const MyTrait for S2 {
   |      ^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const trait impls are experimental
  --> $DIR/staged-api-user-crate.rs:31:20
   |
LL | const fn bound2<T: ~const MyTrait>() {}
   |                    ^^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: const trait impls are experimental
  --> $DIR/staged-api-user-crate.rs:34:14
   |
LL | fn bound3<T: const MyTrait>() {}
   |              ^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `staged_api::MyTrait` is not yet stable as a const trait
  --> $DIR/staged-api-user-crate.rs:24:12
   |
LL | impl const MyTrait for S2 {
   |            ^^^^^^^
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable

error: `staged_api::MyTrait` is not yet stable as a const trait
  --> $DIR/staged-api-user-crate.rs:31:20
   |
LL | const fn bound2<T: ~const MyTrait>() {}
   |                    ^^^^^^
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable

error: `staged_api::MyTrait` is not yet stable as a const trait
  --> $DIR/staged-api-user-crate.rs:34:14
   |
LL | fn bound3<T: const MyTrait>() {}
   |              ^^^^^
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable

error[E0658]: cannot call conditionally-const associated function `<staged_api::Unstable as staged_api::MyTrait>::func` in constant functions
  --> $DIR/staged-api-user-crate.rs:12:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = note: see issue #67792 <https://github.com/rust-lang/rust/issues/67792> for more information
   = help: add `#![feature(const_trait_impl)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: `staged_api::MyTrait` is not yet stable as a const trait
  --> $DIR/staged-api-user-crate.rs:12:5
   |
LL |     Unstable::func();
   |     ^^^^^^^^^^^^^^^^
   |
   = help: add `#![feature(unstable)]` to the crate attributes to enable

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0658`.
